# vulkan-game

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  headers.pch  incbin.h  main.cpp
shaders/: CMakeLists.txt  load_binaries.cmake
shaders/include/: shader_manager.hpp
shaders/src/: shader_manager.cpp
src/: debug.cpp  debug.hpp  main.cpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp  vertex.hpp  window.cpp  window.hpp
src/engine/: frame_buffers.cpp  frame_buffers.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  queue_families.cpp  queue_families.hpp  render_pass.cpp  render_pass.hpp  swap_chain.cpp  swap_chain.hpp
src/primitives/: base_primitive.cpp  base_primitive.hpp
